<resources>
    <string name="app_name">i230553</string>
    <string name="socially">Socially</string>
    <string name="from">from</string>
    <string name="smd">SMD</string>
    <string name="createanaccount">Create an account and Sign Up</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_last_name">Your last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="_02_09_2003">02 - 09 - 2003</string>
    <string name="_00000000">00000000</string>
    <string name="jacob_w">jacob_w</string>
    <string name="log_in">Log in</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="create_an_account_and_sign_up">Create an account and Sign Up</string>
    <string name="forget_password">Forget password?</string>
    <string name="asad_khasanov">asad_khasanov</string>
    <string name="or">OR</string>
    <string name="your_story">Your Story</string>
    <string name="karennne">karennne</string>
    <string name="zackjohn">zackjohn</string>
    <string name="kioron_d">kioron_d</string>
    <string name="joshua_l">joshua_l</string>
    <string name="tokyo_japan">Tokyo, Japan</string>
    <string name="caption1">The game in Japan was amazing and I want to</string>
    <string name="caption2">share some photos</string>
    <string name="karennne_liked_3_posts">karennne liked 3 posts.</string>
    <string name="kiero_d_zackjohn_and_criag_love_likedjoshua_l_photo">kiero_d, zackjohn and criag_love liked joshua_l photo.</string>
    <string name="internshala">internshala</string>
    <string name="time_of_chat">4:49 PM</string>
    <string name="digital_goodies_designer">Digital goodies designer  </string>
    <string name="pixsellz"> \@pixsellz</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="friend_descrption">FAST National University (also known as FAST-NUCES) is a leading, privately-run technical university in Pakistan with federal charter status, founded in 2000</string>
    <string name="followed_by_kiero_2_more">Followed by kiero + 2 more</string>


</resources>